[package]
name = "splash-cli"
version = "0.1.0"
authors = ["Federico Vitale <federico.vitale@chili.com>"]
edition = "2018"

#  See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }

structopt = "0.3.13"
reqwest = {version = "0.10.6", features = ["json", "blocking"]}
serde_json = "1.0.56"